@@ -4,14 +4,14 @@ import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.ArgumentsProvider;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 
-import static uk.gov.hmcts.probate.dmn.initiation.CamundaTaskWaInitiationBaseTest.invalidHandOffReason;
+import static java.util.Collections.emptyList;
 import static uk.gov.hmcts.probate.dmn.initiation.CamundaTaskWaInitiationBaseTest.additionalData;
 import static uk.gov.hmcts.probate.dmn.initiation.CamundaTaskWaInitiationBaseTest.handOffReasonListWithHandOffReason;
+import static uk.gov.hmcts.probate.dmn.initiation.CamundaTaskWaInitiationBaseTest.invalidHandOffReason;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.APPLY_FOR_GRANT_PAPER_APPLICATION_MAN_EVENT;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.ATTACH_SCANNED_DOCS_EVENT;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.BO_AMEND_CASE_DETAILS_FOR_AWAITING_DOCUMENTATION_EVENT;
@@ -19,12 +19,12 @@ import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.BO_RESOLVE_ST
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.CASE_PRINTED_STATE;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.CHANGE_STATE_EVENT;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.CREATE_CASE_FROM_BULK_SCAN_EVENT;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DIGITAL_CASE_PROBATE;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DIGITAL_CASE_PROBATE_READY_TO_ISSUE;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.HANDLE_EVIDENCE_EVENT;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.PROBATE_TASK_TYPE_NAME;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.READY_TO_ISSUE_STATE;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.RESOLVE_SME_REFERRAL_EVENT;
-import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DIGITAL_CASE_PROBATE;
-import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_DIGITAL_CASE_PROBATE_READY_TO_ISSUE;
 
 public class CamundaTaskWaInitiationProbateTestProvider implements ArgumentsProvider {
 
@@ -49,294 +49,323 @@ public class CamundaTaskWaInitiationProbateTestProvider implements ArgumentsProv
             Arguments.of(
                     "someOtherEventId",
                     CASE_PRINTED_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
-                    List.of(examineDigitalCaseProbateTaskAttributes)
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
-                    List.of(examineDigitalCaseProbateReadyToIssueTaskAttributes)
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(true, "gop", false, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(false, "other", false, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(false, "gop", true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                    additionalData(false, "gop", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     HANDLE_EVIDENCE_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", false,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            emptyList(), false),
+                    List.of(examineDigitalCaseProbateTaskAttributes)
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    READY_TO_ISSUE_STATE,
+                    additionalData(false, "gop", false,
+                            emptyList(), false),
+                    List.of(examineDigitalCaseProbateReadyToIssueTaskAttributes)
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(true, "gop", false,
+                            emptyList(), false),
+                    emptyList()
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(false, "other", false,
+                            emptyList(), false),
+                    emptyList()
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(false, "gop", true,
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
+            ),
+            Arguments.of(
+                    HANDLE_EVIDENCE_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(false, "gop", false,
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     HANDLE_EVIDENCE_EVENT,
                     CASE_PRINTED_STATE,
                     null,
-                    Collections.emptyList()
+                    emptyList()
             ),
             Arguments.of(
                     BO_AMEND_CASE_DETAILS_FOR_AWAITING_DOCUMENTATION_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
-                    List.of(examineDigitalCaseProbateTaskAttributes)
+                    additionalData(true, "gop", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     BO_AMEND_CASE_DETAILS_FOR_AWAITING_DOCUMENTATION_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(true, "gop", false, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    BO_AMEND_CASE_DETAILS_FOR_AWAITING_DOCUMENTATION_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(false, "other", false, Collections.emptyList()),
-                    Collections.emptyList()
+                    additionalData(false, "other", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     BO_AMEND_CASE_DETAILS_FOR_AWAITING_DOCUMENTATION_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", false,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     BO_AMEND_CASE_DETAILS_FOR_AWAITING_DOCUMENTATION_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    APPLY_FOR_GRANT_PAPER_APPLICATION_MAN_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
-                    List.of(examineDigitalCaseProbateTaskAttributes)
-            ),
-            Arguments.of(
-                    APPLY_FOR_GRANT_PAPER_APPLICATION_MAN_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(true, "gop", false, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    APPLY_FOR_GRANT_PAPER_APPLICATION_MAN_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(false, "other", false, Collections.emptyList()),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     APPLY_FOR_GRANT_PAPER_APPLICATION_MAN_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", false,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            emptyList(), false),
+                    List.of(examineDigitalCaseProbateTaskAttributes)
+            ),
+            Arguments.of(
+                    APPLY_FOR_GRANT_PAPER_APPLICATION_MAN_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(true, "gop", false,
+                            emptyList(), false),
+                    emptyList()
+            ),
+            Arguments.of(
+                    APPLY_FOR_GRANT_PAPER_APPLICATION_MAN_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(false, "other", false,
+                            emptyList(), false),
+                    emptyList()
+            ),
+            Arguments.of(
+                    APPLY_FOR_GRANT_PAPER_APPLICATION_MAN_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(false, "gop", false,
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     APPLY_FOR_GRANT_PAPER_APPLICATION_MAN_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    ATTACH_SCANNED_DOCS_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
-                    List.of(examineDigitalCaseProbateTaskAttributes)
-            ),
-            Arguments.of(
-                    ATTACH_SCANNED_DOCS_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(true, "gop", false, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    ATTACH_SCANNED_DOCS_EVENT,
-                    CASE_PRINTED_STATE,
-                    additionalData(false, "other", false, Collections.emptyList()),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     ATTACH_SCANNED_DOCS_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", false,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            emptyList(), false),
+                    List.of(examineDigitalCaseProbateTaskAttributes)
+            ),
+            Arguments.of(
+                    ATTACH_SCANNED_DOCS_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(true, "gop", false,
+                            emptyList(), false),
+                    emptyList()
+            ),
+            Arguments.of(
+                    ATTACH_SCANNED_DOCS_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(false, "other", false,
+                            emptyList(), false),
+                    emptyList()
+            ),
+            Arguments.of(
+                    ATTACH_SCANNED_DOCS_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(false, "gop", false,
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     ATTACH_SCANNED_DOCS_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     BO_RESOLVE_STOP_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
+                    additionalData(false, "gop", false,
+                            emptyList(), false),
                     List.of(examineDigitalCaseProbateTaskAttributes)
             ),
             Arguments.of(
                     BO_RESOLVE_STOP_EVENT,
                     READY_TO_ISSUE_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
+                    additionalData(false, "gop", false,
+                            emptyList(), false),
                     List.of(examineDigitalCaseProbateReadyToIssueTaskAttributes)
             ),
             Arguments.of(
                     BO_RESOLVE_STOP_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(true, "gop", false, Collections.emptyList()),
-                    Collections.emptyList()
+                    additionalData(true, "gop", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     BO_RESOLVE_STOP_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(false, "other", false, Collections.emptyList()),
-                    Collections.emptyList()
+                    additionalData(false, "other", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     BO_RESOLVE_STOP_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", false,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     BO_RESOLVE_STOP_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     CHANGE_STATE_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
+                    additionalData(false, "gop", false,
+                            emptyList(), false),
                     List.of(examineDigitalCaseProbateTaskAttributes)
             ),
             Arguments.of(
                     CHANGE_STATE_EVENT,
                     READY_TO_ISSUE_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
+                    additionalData(false, "gop", false,
+                            emptyList(), false),
                     List.of(examineDigitalCaseProbateReadyToIssueTaskAttributes)
             ),
             Arguments.of(
                     CHANGE_STATE_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(true, "gop", false, Collections.emptyList()),
-                    Collections.emptyList()
+                    additionalData(true, "gop", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     CHANGE_STATE_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(false, "other", false, Collections.emptyList()),
-                    Collections.emptyList()
+                    additionalData(false, "other", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     CHANGE_STATE_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", false,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     CHANGE_STATE_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     RESOLVE_SME_REFERRAL_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
+                    additionalData(false, "gop", false,
+                            emptyList(), false),
                     List.of(examineDigitalCaseProbateTaskAttributes)
             ),
             Arguments.of(
                     RESOLVE_SME_REFERRAL_EVENT,
                     READY_TO_ISSUE_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
+                    additionalData(false, "gop", false,
+                            emptyList(), false),
                     List.of(examineDigitalCaseProbateReadyToIssueTaskAttributes)
             ),
             Arguments.of(
                     RESOLVE_SME_REFERRAL_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(true, "gop", false, Collections.emptyList()),
-                    Collections.emptyList()
+                    additionalData(true, "gop", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     RESOLVE_SME_REFERRAL_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(false, "other", false, Collections.emptyList()),
-                    Collections.emptyList()
+                    additionalData(false, "other", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     RESOLVE_SME_REFERRAL_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", false,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     RESOLVE_SME_REFERRAL_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     CREATE_CASE_FROM_BULK_SCAN_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(false, "gop", false, Collections.emptyList()),
+                    additionalData(false, "gop", false,
+                            emptyList(), false),
                     List.of(examineDigitalCaseProbateTaskAttributes)
             ),
             Arguments.of(
                     CREATE_CASE_FROM_BULK_SCAN_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(true, "gop", false, Collections.emptyList()),
-                    Collections.emptyList()
+                    additionalData(true, "gop", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     CREATE_CASE_FROM_BULK_SCAN_EVENT,
                     CASE_PRINTED_STATE,
-                    additionalData(false, "other", false, Collections.emptyList()),
-                    Collections.emptyList()
+                    additionalData(false, "other", false,
+                            emptyList(), false),
+                    emptyList()
             ),
             Arguments.of(
                     CREATE_CASE_FROM_BULK_SCAN_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", false,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
             ),
             Arguments.of(
                     CREATE_CASE_FROM_BULK_SCAN_EVENT,
                     CASE_PRINTED_STATE,
                     additionalData(false, "gop", true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
+                            handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                    emptyList()
+            ),
+            Arguments.of(
+                    BO_AMEND_CASE_DETAILS_FOR_AWAITING_DOCUMENTATION_EVENT,
+                    CASE_PRINTED_STATE,
+                    additionalData(false, "gop", true,
+                            emptyList(),  true),
+                    List.of(examineDigitalCaseProbateTaskAttributes)
             )
         );
     }
